細かいバグ修正

--- a/sequential-data-modeling/1_probability.ipynb
+++ b/sequential-data-modeling/1_probability.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "cov = np.cov([x,y])\n",
     "A = cov[0][1]/cov[0][0]\n",
-    "B = np.average(y) - a*np.average(x)\n",
+    "B = np.average(y) - A*np.average(x)\n",
     "\n",
     "def prediction(x):\n",
     "    return A*x+B\n",
