系列データモデリングの課題3を進めた

--- a/sequential-data-modeling/3_crf.ipynb
+++ b/sequential-data-modeling/3_crf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -95,19 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2-1: 0.75\n",
-      "2-2: 0.6000000000000001\n",
-      "2-3: 0.55\n",
-      "2-4: 1.0999999999999999\n",
-      "2-5: 1.2\n",
-      "2-6: 1.2\n"
+      "2-1: 0.13821450482412817\n",
+      "2-2: 0.11896232675976676\n",
+      "2-3: 0.11316046562095881\n",
+      "2-4: 0.19613571854080644\n",
+      "2-5: 0.21676349212716992\n",
+      "2-6: 0.21676349212716992\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
     "def softmax(x):\n",
     "    return np.exp(x) / np.sum(np.exp(x))\n",
     "\n",
-    "path_scores = [\n",
+    "middle_path_scores = [\n",
     "    path_score('A', 'N'),\n",
     "    path_score('A', 'V'),\n",
     "    path_score('V', 'N'),\n",
@@ -126,10 +126,130 @@
     "    path_score('N', 'V'),\n",
     "]\n",
     "\n",
-    "probabilities = softmax(path_scores)\n",
+    "middle_probabilities = softmax(middle_path_scores)\n",
     "\n",
-    "for i, score in enumerate(probabilities):\n",
+    "for i, score in enumerate(middle_probabilities):\n",
     "    print('2-'+str(i+1)+':', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3-1: 0.34425334574357264\n",
+      "3-2: 0.3114933085128547\n",
+      "3-3: 0.34425334574357264\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_path_scores = [\n",
+    "    w['T']['/s/']['A'],\n",
+    "    w['T']['/s/']['V'],\n",
+    "    w['T']['/s/']['N'],\n",
+    "]\n",
+    "\n",
+    "input_probabilities = softmax(input_path_scores)\n",
+    "\n",
+    "for i, score in enumerate(input_probabilities):\n",
+    "    print('3-'+str(i+1)+':', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3-4: 0.5124973964842102\n",
+      "3-5: 0.4875026035157896\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_path_scores = [\n",
+    "    w['T']['N']['/e/'],\n",
+    "    w['T']['V']['/e/'],\n",
+    "]\n",
+    "\n",
+    "output_probabilities = softmax(output_path_scores)\n",
+    "\n",
+    "for i, score in enumerate(output_probabilities):\n",
+    "    print('3-'+str(i+4)+':', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4-1 : 1.0311493308512856\n",
+      "4-2 : -0.06885066914871452\n",
+      "4-3 : 0.03114933085128546\n",
+      "4-4 : 0.22674179773442155\n",
+      "4-5 : -0.8732582022655785\n",
+      "4-6 : -0.8732582022655785\n",
+      "4-7 : -0.2732582022655785\n",
+      "4-8 : -0.32325820226557844\n",
+      "4-9 : -0.2732582022655785\n",
+      "4-10: 1.0243751301757895\n",
+      "4-11: -0.025624869824210472\n"
+     ]
+    }
+   ],
+   "source": [
+    "# correct path is '/s/' -> 'A' -> 'N' -> '/e/'\n",
+    "\n",
+    "learning_rate = 1.0\n",
+    "\n",
+    "grad = 1 - np.sum(input_probabilities*input_path_scores)\n",
+    "w['T']['/s/']['A'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(input_probabilities*input_path_scores)\n",
+    "w['T']['/s/']['V'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(input_probabilities*input_path_scores)\n",
+    "w['T']['/s/']['N'] += learning_rate * grad\n",
+    "\n",
+    "grad = 1 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "w['T']['A']['N'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "w['T']['A']['V'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "w['T']['V']['N'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "w['T']['V']['V'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "w['T']['N']['N'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "w['T']['N']['V'] += learning_rate * grad\n",
+    "\n",
+    "grad = 1 - np.sum(output_probabilities*output_path_scores)\n",
+    "w['T']['N']['/e/'] += learning_rate * grad\n",
+    "grad = 0 - np.sum(output_probabilities*output_path_scores)\n",
+    "w['T']['V']['/e/'] += learning_rate * grad\n",
+    "\n",
+    "print('4-1 :', w['T']['/s/']['A'])\n",
+    "print('4-2 :', w['T']['/s/']['V'])\n",
+    "print('4-3 :', w['T']['/s/']['N'])\n",
+    "print('4-4 :', w['T']['A']['N'])\n",
+    "print('4-5 :', w['T']['A']['V'])\n",
+    "print('4-6 :', w['T']['V']['N'])\n",
+    "print('4-7 :', w['T']['V']['V'])\n",
+    "print('4-8 :', w['T']['N']['N'])\n",
+    "print('4-9 :', w['T']['N']['V'])\n",
+    "print('4-10:', w['T']['N']['/e/'])\n",
+    "print('4-11:', w['T']['V']['/e/'])"
    ]
   }
  ],
