系列データモデリングの課題3を修正

--- a/sequential-data-modeling/3_crf.ipynb
+++ b/sequential-data-modeling/3_crf.ipynb
@@ -214,29 +214,29 @@
     "\n",
     "learning_rate = 1.0\n",
     "\n",
-    "grad = 1 - np.sum(input_probabilities*input_path_scores)\n",
+    "grad = 1 - input_probabilities[0]\n",
     "w['T']['/s/']['A'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(input_probabilities*input_path_scores)\n",
+    "grad = 0 - input_probabilities[0]\n",
     "w['T']['/s/']['V'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(input_probabilities*input_path_scores)\n",
+    "grad = 0 - input_probabilities[0]\n",
     "w['T']['/s/']['N'] += learning_rate * grad\n",
     "\n",
-    "grad = 1 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "grad = 1 - middle_probabilities[0]\n",
     "w['T']['A']['N'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "grad = 0 - middle_probabilities[0]\n",
     "w['T']['A']['V'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "grad = 0 - middle_probabilities[0]\n",
     "w['T']['V']['N'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "grad = 0 - middle_probabilities[0]\n",
     "w['T']['V']['V'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "grad = 0 - middle_probabilities[0]\n",
     "w['T']['N']['N'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(middle_probabilities*middle_path_scores)\n",
+    "grad = 0 - middle_probabilities[0]\n",
     "w['T']['N']['V'] += learning_rate * grad\n",
     "\n",
-    "grad = 1 - np.sum(output_probabilities*output_path_scores)\n",
+    "grad = 1 - output_probabilities[0]\n",
     "w['T']['N']['/e/'] += learning_rate * grad\n",
-    "grad = 0 - np.sum(output_probabilities*output_path_scores)\n",
+    "grad = 0 - output_probabilities[0]\n",
     "w['T']['V']['/e/'] += learning_rate * grad\n",
     "\n",
     "print('4-1 :', w['T']['/s/']['A'])\n",
