--- a/sequential-data-modeling/4_mixture_model.ipynb
+++ b/sequential-data-modeling/4_mixture_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,10 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "N = 5\n",
     "x = np.matrix([\n",
-    "    [0, n[1], n[1]+n[2]+n[3], n[1], n[2]+n[3], n[0]+n[2]],\n",
-    "    [0, n[1]+n[3], n[3], n[0]+n[2], n[0]+n[1], n[0]+n[0]],\n",
+    "    [n[1], n[1]+n[2]+n[3], n[1], n[2]+n[3], n[0]+n[2]],\n",
+    "    [n[1]+n[3], n[3], n[0]+n[2], n[0]+n[1], n[0]+n[0]],\n",
     "])\n",
     "w = np.matrix([\n",
     "    [1],\n",
@@ -55,22 +56,22 @@
     "    [0,1],\n",
     "])\n",
     "\n",
-    "for i in range(1,6):\n",
-    "    print('1-'+str(i*2-1)+' :', x[0,i])\n",
-    "    print('1-'+str(i*2)+' :', x[1,i])"
+    "for i in range(N):\n",
+    "    print('1-'+str(1+i*2)+' :', x[0,i])\n",
+    "    print('1-'+str(2+i*2)+' :', x[1,i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-11 : 3.0\n",
-      "1-12 : 4.0\n"
+      "1-11 : 3.6\n",
+      "1-12 : 4.8\n"
      ]
     }
    ],
@@ -82,37 +83,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-13 : -1.0\n",
-      "1-14 : -1.0\n",
-      "1-15 : 2.0\n",
-      "1-16 : -3.0\n",
-      "1-17 : -1.0\n",
-      "1-18 : 2.0\n",
-      "1-19 : 0.0\n",
-      "1-20 : 2.0\n",
-      "1-21 : 3.0\n",
-      "1-22 : 4.0\n"
+      "1-13 : -1.6\n",
+      "1-14 : -1.7999999999999998\n",
+      "1-15 : 1.4\n",
+      "1-16 : -3.8\n",
+      "1-17 : -1.6\n",
+      "1-18 : 1.2000000000000002\n",
+      "1-19 : -0.6000000000000001\n",
+      "1-20 : 1.2000000000000002\n",
+      "1-21 : 2.4\n",
+      "1-22 : 3.2\n"
      ]
     }
    ],
    "source": [
     "x = x - mu\n",
     "\n",
-    "for i in range(1,6):\n",
-    "    print('1-'+str(12+i*2-1)+' :', x[0,i])\n",
-    "    print('1-'+str(12+i*2)+' :', x[1,i])"
+    "for i in range(N):\n",
+    "    print('1-'+str(13+i*2)+' :', x[0,i])\n",
+    "    print('1-'+str(13+i*2+1)+' :', x[1,i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -132,60 +133,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2-2 : -0.5\n",
-      "2-3 : 1.0\n",
-      "2-4 : -0.5\n",
-      "2-5 : 0.0\n",
-      "2-6 : 1.5\n"
+      "2-2 : -0.8\n",
+      "2-3 : 0.7\n",
+      "2-4 : -0.8\n",
+      "2-5 : -0.30000000000000004\n",
+      "2-6 : 1.2\n"
      ]
     }
    ],
    "source": [
-    "z = [0,]\n",
+    "z = []\n",
     "\n",
-    "for i in range(1, x.shape[1]):\n",
+    "for i in range(N):\n",
     "    tmp = sigma_zx * w.T @ np.linalg.inv(sigma) @ x[:,i]\n",
     "    tmp = tmp[0,0]\n",
     "    z.append(tmp)\n",
-    "    print('2-'+str(i+1)+' :', tmp)"
+    "    print('2-'+str(i+2)+' :', tmp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2-7 : 0.75\n",
-      "2-8 : 1.5\n",
-      "2-9 : 0.75\n",
-      "2-10 : 0.5\n",
-      "2-11 : 2.75\n"
+      "2-7 : 1.1400000000000001\n",
+      "2-8 : 0.99\n",
+      "2-9 : 1.1400000000000001\n",
+      "2-10 : 0.5900000000000001\n",
+      "2-11 : 1.94\n"
      ]
     }
    ],
    "source": [
-    "zz = [0,]\n",
+    "zz = []\n",
     "\n",
-    "for i in range(1, x.shape[1]):\n",
+    "for i in range(N):\n",
     "    tmp = sigma_zx + z[i]*z[i]\n",
     "    zz.append(tmp)\n",
-    "    print('2-'+str(i+6)+' :', tmp)"
+    "    print('2-'+str(i+7)+' :', tmp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -193,13 +194,13 @@
      "output_type": "stream",
      "text": [
       "3-1 : 5\n",
-      "3-2 : 15.0\n",
-      "3-3 : 5.0\n",
-      "3-4 : 5.0\n",
-      "3-5 : 34.0\n",
-      "3-6 : 6.25\n",
-      "3-7 : 7.5\n",
-      "3-8 : 2.5\n"
+      "3-2 : 13.200000000000001\n",
+      "3-3 : 2.5999999999999996\n",
+      "3-4 : 2.5999999999999996\n",
+      "3-5 : 30.800000000000004\n",
+      "3-6 : 5.800000000000001\n",
+      "3-7 : 6.6000000000000005\n",
+      "3-8 : 1.2999999999999998\n"
      ]
     }
    ],
@@ -209,7 +210,7 @@
     "print('3-1 :', N)\n",
     "\n",
     "xx = np.matrix(np.zeros((2,2)))\n",
-    "for i in range(1, x.shape[1]):\n",
+    "for i in range(N):\n",
     "    xx += x[:,i] @ x[:,i].T\n",
     "\n",
     "for i in range(2):\n",
@@ -221,7 +222,7 @@
     "print('3-6 :', zz)\n",
     "\n",
     "xz = np.matrix(np.zeros((2,1)))\n",
-    "for i in range(1,x.shape[1]):\n",
+    "for i in range(N):\n",
     "    xz += x[:,i] * z[i]\n",
     "print('3-7 :', xz[0,0])\n",
     "print('3-8 :', xz[1,0])"
@@ -229,30 +230,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4-1 : 7.5\n",
-      "4-2 : 2.5\n",
-      "4-3 : 6.25\n",
-      "4-4 : 1.2\n",
-      "4-5 : 0.4\n",
-      "4-6 : 15.0\n",
-      "4-7 : 5.0\n",
-      "4-8 : 5.0\n",
-      "4-9 : 34.0\n",
-      "4-10 : 7.5\n",
-      "4-11: 2.5\n",
-      "4-12: 1.2\n",
-      "4-13: 0.4\n",
-      "4-14: 1.170531187208764\n",
+      "4-1 : 6.6000000000000005\n",
+      "4-2 : 1.2999999999999998\n",
+      "4-3 : 5.800000000000001\n",
+      "4-4 : 1.1379310344827587\n",
+      "4-5 : 0.2241379310344827\n",
+      "4-6 : 13.200000000000001\n",
+      "4-7 : 2.5999999999999996\n",
+      "4-8 : 2.5999999999999996\n",
+      "4-9 : 30.800000000000004\n",
+      "4-10 : 6.6000000000000005\n",
+      "4-11: 1.2999999999999998\n",
+      "4-12: 1.1379310344827587\n",
+      "4-13: 0.2241379310344827\n",
+      "4-14: 1.1278307351678385\n",
       "4-15: 0.0\n",
       "4-16: 0.0\n",
-      "4-17: 6.629468812791236\n"
+      "4-17: 6.111824437245956\n"
      ]
     }
    ],
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -307,18 +308,18 @@
       "5-10: 0\n",
       "5-11: 0\n",
       "5-12: 1\n",
-      "5-13: 1.2\n",
-      "5-14: 0.4\n",
-      "5-15: 1.2\n",
-      "5-16: 0.4\n",
-      "5-17: 1.170531187208764\n",
+      "5-13: 1.1379310344827587\n",
+      "5-14: 0.2241379310344827\n",
+      "5-15: 1.1379310344827587\n",
+      "5-16: 0.2241379310344827\n",
+      "5-17: 1.1278307351678385\n",
       "5-18: 0.0\n",
       "5-19: 0.0\n",
-      "5-20: 6.629468812791236\n",
-      "5-21: 2.610531187208764\n",
-      "5-22: 0.48\n",
-      "5-23: 0.48\n",
-      "5-24: 6.789468812791236\n"
+      "5-20: 6.111824437245956\n",
+      "5-21: 2.4227177744068396\n",
+      "5-22: 0.2550535077288941\n",
+      "5-23: 0.2550535077288941\n",
+      "5-24: 6.162062249374375\n"
      ]
     }
    ],
