系列データモデリング課題5を進めた

--- a/sequential-data-modeling/5_kalman_filtering.ipynb
+++ b/sequential-data-modeling/5_kalman_filtering.ipynb
@@ -34,14 +34,7 @@
     "b = np.array(b)\n",
     "\n",
     "def gaussian_probability(mu, sigma, x):\n",
-    "    return 1/np.sqrt(2*np.pi*sigma) * np.exp(-((x-mu)**2)/(2*sigma))\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "x = np.linspace(-5, 5, 1000)\n",
-    "\n",
-    "plt.plot(x, gaussian_probability(0,1,x))\n",
-    "plt.show()"
+    "    return 1/np.sqrt(2*np.pi*sigma) * np.exp(-((x-mu)**2)/(2*sigma))"
    ]
   },
   {
@@ -115,8 +108,8 @@
     "\n",
     "print('2-1 :', predicted_mu)\n",
     "print('2-2 :', predicted_p)\n",
-    "print('2-3 :', mu)\n",
-    "print('2-4 :', p)\n",
+    "print('2-3 :', predicted_mu)\n",
+    "print('2-4 :', predicted_p)\n",
     "\n",
     "print('2-5 :', w*predicted_mu)\n",
     "print('2-6 :', w*predicted_p*w + emission_variance)\n",
@@ -195,8 +188,8 @@
     "\n",
     "    print(str(2+i)+'-1  :', predicted_mu)\n",
     "    print(str(2+i)+'-2  :', predicted_p)\n",
-    "    print(str(2+i)+'-3  :', mu)\n",
-    "    print(str(2+i)+'-4  :', p)\n",
+    "    print(str(2+i)+'-3  :', predicted_mu)\n",
+    "    print(str(2+i)+'-4  :', predicted_p)\n",
     "\n",
     "    print(str(2+i)+'-5  :', w*predicted_mu)\n",
     "    print(str(2+i)+'-6  :', w*predicted_p*w + emission_variance)\n",
