--- a/sequential-data-modeling/5_kalman_filtering.ipynb
+++ b/sequential-data-modeling/5_kalman_filtering.ipynb
@@ -132,8 +132,8 @@
       "3-4  : 37.14285714285714\n",
       "3-5  : 78.57142857142857\n",
       "3-6  : 77.14285714285714\n",
-      "3-7  : -9.47175758280078\n",
-      "3-8  : -30.37208659417299\n",
+      "3-7  : -3.567958504646652\n",
+      "3-8  : -24.46828751601886\n",
       "3-9  : 0.48148148148148145\n",
       "3-10 : 74.44444444444444\n",
       "3-11 : 19.25925925925926\n",
@@ -146,8 +146,8 @@
       "4-4  : 39.25925925925926\n",
       "4-5  : 74.44444444444444\n",
       "4-6  : 79.25925925925927\n",
-      "4-7  : -9.47175758280078\n",
-      "4-8  : -39.843844176973775\n",
+      "4-7  : -3.229911246110768\n",
+      "4-8  : -27.69819876212963\n",
       "4-9  : 0.49532710280373826\n",
       "4-10 : 72.24299065420561\n",
       "4-11 : 19.813084112149536\n",
@@ -160,8 +160,8 @@
       "5-4  : 39.81308411214954\n",
       "5-5  : 72.24299065420561\n",
       "5-6  : 79.81308411214954\n",
-      "5-7  : -3.7574718685150668\n",
-      "5-8  : -43.60131604548884\n",
+      "5-7  : -12.039597116332784\n",
+      "5-8  : -39.737795878462414\n",
       "5-9  : 0.4988290398126464\n",
       "5-10 : 91.07728337236534\n",
       "5-11 : 19.953161592505854\n",
@@ -183,6 +183,10 @@
     "\n",
     "    print(str(2+i)+'-5  :', w*predicted_mu)\n",
     "    print(str(2+i)+'-6  :', w*predicted_p*w + emission_variance)\n",
+    "\n",
+    "    observation_mu = w*predicted_mu\n",
+    "    observation_p = w*predicted_p*w + emission_variance\n",
+    "\n",
     "    print(str(2+i)+'-7  :', np.log(gaussian_probability(observation_mu, observation_p, x[i])))\n",
     "    likelihood += np.log(gaussian_probability(observation_mu, observation_p, x[i]))\n",
     "    print(str(2+i)+'-8  :', likelihood)\n",
@@ -202,10 +206,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "4146c566596c94ea04e37471cd0c9cce30e32d1fa3c38f3483299c6f71ea1dc7"
+   "hash": "0554a82fbfe5ca376267ac05f8fec98da143c6cfbbd90777e1fa955353dd8465"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('.venv': venv)",
+   "display_name": "Python 3.9.12 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
