--- a/sequential-data-modeling/7_q_learning.ipynb
+++ b/sequential-data-modeling/7_q_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,8 @@
       "Q(s_1, Donalds) = -0.2\n",
       "Q(s_1, Burger) = 0.2\n",
       "Q(s_2, Donalds) = 0.2\n",
-      "Q(s_2, Burger) = 0.2\n"
+      "Q(s_2, Burger) = 0.2\n",
+      "Q(s_3, empty) = 0\n"
      ]
     }
    ],
@@ -63,6 +64,9 @@
     "    {\n",
     "        'Donalds': (b[3]-b[1])/10,\n",
     "        'Burger': (b[3]-b[2])/10,\n",
+    "    },\n",
+    "    {\n",
+    "        'empty': 0,\n",
     "    }\n",
     "]\n",
     "\n",
@@ -72,18 +76,15 @@
     "            print('Q(s_'+ str(i) +', '+ key +') = '+ str(value))\n",
     "\n",
     "\n",
-    "def update_Q_table(now_state, now_action, next_state, reward, is_finish=False):\n",
-    "    if not is_finish:\n",
-    "        Q[now_state][now_action] = (1-LEARNING_RATE)*Q[now_state][now_action] + LEARNING_RATE*(reward + DISCOUNT_RATE*max(Q[next_state].values()))\n",
-    "    else:\n",
-    "        Q[now_state][now_action] = (1-LEARNING_RATE)*Q[now_state][now_action] + LEARNING_RATE*reward\n",
+    "def update_Q_table(now_state, now_action, next_state, reward):\n",
+    "    Q[now_state][now_action] = (1-LEARNING_RATE)*Q[now_state][now_action] + LEARNING_RATE*(reward + DISCOUNT_RATE*max(Q[next_state].values()))\n",
     "\n",
     "display_Q_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,8 @@
       "Q(s_1, Donalds) = -0.2\n",
       "Q(s_1, Burger) = 0.08000000000000002\n",
       "Q(s_2, Donalds) = 0.2\n",
-      "Q(s_2, Burger) = 0.2\n"
+      "Q(s_2, Burger) = 0.2\n",
+      "Q(s_3, empty) = 0\n"
      ]
     }
    ],
@@ -112,14 +114,14 @@
     "else:\n",
     "    reward = -1\n",
     "\n",
-    "update_Q_table(0, actions[0], state, reward)\n",
-    "update_Q_table(state, actions[1], state, reward, is_finish=True)\n",
+    "update_Q_table(now_state=0, now_action=actions[0], next_state=state, reward=0)\n",
+    "update_Q_table(now_state=state, now_action=actions[1], next_state=3, reward=reward)\n",
     "display_Q_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +133,8 @@
       "Q(s_1, Donalds) = -0.2\n",
       "Q(s_1, Burger) = 0.08000000000000002\n",
       "Q(s_2, Donalds) = 0.08000000000000002\n",
-      "Q(s_2, Burger) = 0.2\n"
+      "Q(s_2, Burger) = 0.2\n",
+      "Q(s_3, empty) = 0\n"
      ]
     }
    ],
@@ -148,14 +151,14 @@
     "else:\n",
     "    reward = -1\n",
     "\n",
-    "update_Q_table(0, actions[0], state, reward)\n",
-    "update_Q_table(state, actions[1], state, reward, is_finish=True)\n",
+    "update_Q_table(now_state=0, now_action=actions[0], next_state=state, reward=0)\n",
+    "update_Q_table(now_state=state, now_action=actions[1], next_state=3, reward=reward)\n",
     "display_Q_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +170,8 @@
       "Q(s_1, Donalds) = -0.2\n",
       "Q(s_1, Burger) = 0.08000000000000002\n",
       "Q(s_2, Donalds) = 0.08000000000000002\n",
-      "Q(s_2, Burger) = 0.28\n"
+      "Q(s_2, Burger) = 0.28\n",
+      "Q(s_3, empty) = 0\n"
      ]
     }
    ],
@@ -184,17 +188,17 @@
     "else:\n",
     "    reward = -1\n",
     "\n",
-    "update_Q_table(0, actions[0], state, reward)\n",
-    "update_Q_table(state, actions[1], state, reward, is_finish=True)\n",
+    "update_Q_table(now_state=0, now_action=actions[0], next_state=state, reward=0)\n",
+    "update_Q_table(now_state=state, now_action=actions[1], next_state=3, reward=reward)\n",
     "display_Q_table()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('.venv': venv)",
+   "display_name": "pytorch-tutorial",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-tutorial"
   },
   "language_info": {
    "codemirror_mode": {
