[FIX] incorrect answers

--- a/sequential-data-modeling/2_hmm.ipynb
+++ b/sequential-data-modeling/2_hmm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,26 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'S_in': {'M': 0.7, 'F': 0.3}, 'M': {'M': 0.4, 'F': 0.4, 'S_fin': 0.2, 'H': 0.6, 'S': 0.4}, 'F': {'M': 0.36666666666666664, 'F': 0.3, 'S_fin': 0.3333333333333333, 'H': 0.6, 'S': 0.4}}\n",
-      "1-1 : 0.7\n",
-      "1-2 : 0.3\n",
-      "1-3 : 0.6\n",
-      "1-4 : 0.4\n",
-      "1-5 : 0.6\n",
-      "1-6 : 0.4\n",
-      "1-7 : 0.4\n",
-      "1-8 : 0.4\n",
-      "1-9 : 0.2\n",
-      "1-10: 0.3\n",
-      "1-11: 0.36666666666666664\n",
-      "1-12: 0.3333333333333333\n"
+      "{'S_in': {'M': 0.3, 'F': 0.7}, 'M': {'M': 0.36666666666666664, 'F': 0.36666666666666664, 'S_fin': 0.26666666666666666, 'H': 0.4, 'S': 0.6}, 'F': {'M': 0.3333333333333333, 'F': 0.26666666666666666, 'S_fin': 0.4, 'H': 0.4, 'S': 0.6}}\n",
+      "1-1 : 0.3\n",
+      "1-2 : 0.7\n",
+      "1-3 : 0.4\n",
+      "1-4 : 0.6\n",
+      "1-5 : 0.4\n",
+      "1-6 : 0.6\n",
+      "1-7 : 0.36666666666666664\n",
+      "1-8 : 0.36666666666666664\n",
+      "1-9 : 0.26666666666666666\n",
+      "1-10: 0.26666666666666666\n",
+      "1-11: 0.3333333333333333\n",
+      "1-12: 0.4\n"
      ]
     }
    ],
@@ -49,22 +50,22 @@
     "# p[i][j] = p(j|i)\n",
     "p = {\n",
     "    'S_in':{\n",
-    "        'M': (10+n[0])/20,\n",
-    "        'F': (10-n[0])/20,\n",
+    "        'M': (10-n[0])/20,\n",
+    "        'F': (10+n[0])/20,\n",
     "    },\n",
     "    'M':{\n",
-    "        'M': (14-n[1])/30,\n",
-    "        'F': (14-n[2])/30,\n",
-    "        'S_fin': (2+n[1]+n[2])/30,\n",
-    "        'H': (10+n[2])/20,\n",
-    "        'S': (10-n[2])/20,\n",
+    "        'M': (13-n[1])/30,\n",
+    "        'F': (13-n[2])/30,\n",
+    "        'S_fin': (4+n[1]+n[2])/30,\n",
+    "        'H': (10-n[2])/20,\n",
+    "        'S': (10+n[2])/20,\n",
     "    },\n",
     "    'F':{\n",
-    "        'M': (13-n[1])/30,\n",
-    "        'F': (13-n[0])/30,\n",
-    "        'S_fin': (4+n[0]+n[1])/30,\n",
-    "        'H': (10+n[1])/20,\n",
-    "        'S': (10-n[1])/20,\n",
+    "        'M': (12-n[1])/30,\n",
+    "        'F': (12-n[0])/30,\n",
+    "        'S_fin': (6+n[0]+n[1])/30,\n",
+    "        'H': (10-n[1])/20,\n",
+    "        'S': (10+n[1])/20,\n",
     "    }\n",
     "}\n",
     "\n",
@@ -85,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,26 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2-1: 0.42\n",
-      "2-2: 0.18\n",
-      "2-3: 0.1008\n",
-      "2-4: 0.1008\n",
-      "2-5: 0.024192\n",
-      "2-6: 0.024192\n",
-      "2-7: 0.008064\n",
-      "2-8: M\n",
-      "2-9: H\n",
+      "2-1: 0.18\n",
+      "2-2: 0.42\n",
+      "2-3: 0.08399999999999999\n",
+      "2-4: 0.0672\n",
+      "2-5: 0.018479999999999996\n",
+      "2-6: 0.018479999999999996\n",
+      "2-7: 0.007391999999999999\n",
+      "2-8: F\n",
+      "2-9: S\n",
       "2-10: M\n",
-      "2-11: H\n",
+      "2-11: S\n",
       "2-12: M\n",
-      "2-13: H\n"
+      "2-13: S\n"
      ]
     }
    ],
@@ -171,6 +173,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,23 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3-1 : 0.27999999999999997\n",
-      "3-2 : 0.12\n",
-      "3-3 : 0.0624\n",
-      "3-4 : 0.0592\n",
-      "3-5 : 0.027999999999999997\n",
-      "3-6 : 0.025632000000000002\n",
-      "3-7 : 0.014144\n",
-      "3-8 : 0.014144\n",
-      "3-9 : 0.0624\n",
-      "3-10: 0.0592\n"
+      "3-1 : 0.18\n",
+      "3-2 : 0.42\n",
+      "3-3 : 0.12359999999999999\n",
+      "3-4 : 0.10679999999999998\n",
+      "3-5 : 0.032367999999999994\n",
+      "3-6 : 0.029519999999999998\n",
+      "3-7 : 0.020439466666666663\n",
+      "3-8 : 0.020439466666666663\n",
+      "3-9 : 0.12359999999999999\n",
+      "3-10: 0.10679999999999998\n"
      ]
     }
    ],
@@ -233,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -241,23 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4-1 : 0.03712\n",
-      "4-2 : 0.031253333333333334\n",
-      "4-3 : 0.128\n",
-      "4-4 : 0.10399999999999998\n",
-      "4-5 : 0.2\n",
-      "4-6 : 0.3333333333333333\n",
-      "4-7 : 0.03536\n",
-      "4-8 : 0.03536\n",
-      "4-9 : 0.128\n",
-      "4-10: 0.10399999999999998\n"
+      "4-1 : 0.03872\n",
+      "4-2 : 0.03207111111111111\n",
+      "4-3 : 0.09777777777777778\n",
+      "4-4 : 0.07822222222222222\n",
+      "4-5 : 0.26666666666666666\n",
+      "4-6 : 0.4\n",
+      "4-7 : 0.03406577777777778\n",
+      "4-8 : 0.03406577777777778\n",
+      "4-9 : 0.09777777777777778\n",
+      "4-10: 0.07822222222222222\n"
      ]
     }
    ],
@@ -267,8 +271,8 @@
     "emotions = ['S', 'S', 'H']\n",
     "\n",
     "beta = [\n",
-    "    [0,0,p['M']['S_fin']],\n",
-    "    [0,0,p['F']['S_fin']],\n",
+    "    [0, 0, p['M']['S_fin']],\n",
+    "    [0, 0, p['F']['S_fin']],\n",
     "]\n",
     "\n",
     "for i in reversed(range(N-1)):\n",
@@ -295,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,26 +308,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5-1 : 0.0079872\n",
-      "5-2 : 0.0061568\n",
-      "5-3 : 0.5647058823529412\n"
+      "5-1 : 0.012085333333333333\n",
+      "5-2 : 0.008354133333333331\n",
+      "5-3 : 0.3547646383467279\n"
      ]
     }
    ],
    "source": [
     "print('5-1 :', alpha[0][1]*beta[0][1])\n",
     "print('5-2 :', alpha[1][1]*beta[1][1])\n",
-    "print('5-3 :', (alpha[0][1]*beta[0][1])/(alpha[0][1]*beta[0][1]+alpha[1][1]*beta[1][1]))"
+    "print('5-3 :', (alpha[0][1]*beta[0][1])/s_in)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -331,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
